<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/addName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:hint="Enter Name" />

        <EditText
            android:id="@+id/addOpeningHourWD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:hint="Opening Hour (Monday to Friday) (from 0 to 24)" />

        <EditText
            android:id="@+id/addClosingHourWD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:hint="Closing Hour (Monday to Friday) (from 0 to 24)" />

        <EditText
            android:id="@+id/addOpeningHourWE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:hint="Opening Hour (Saturday/Sunday) (from 0 to 24)" />

        <EditText
            android:id="@+id/addClosingHourWE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:hint="Closing Hour (Saturday/Sunday) (from 0 to 24)" />

        <EditText
            android:id="@+id/addAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:hint="Enter Address" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonAddClinic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Add" />

        </LinearLayout>

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cancel" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>