<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcomeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="WELCOME"
            android:textColor="#2E7DBB"
            android:textSize="25dp" />

        <Button
            android:id="@+id/servicesAdmin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:onClick="servicesAdminButton"
            android:text="View Services" />

        <Button
            android:id="@+id/usersAdmin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:onClick="userAdminButton"
            android:text="View Users" />

        <Button
            android:id="@+id/clinicsAdmin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:onClick="clinicsAdminButton"
            android:text="View Clinics" />

        <Button
            android:id="@+id/logoff"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:onClick="logoffButton"
            android:text="Log Off" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>