<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userAdmin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/addClinic"
            android:layout_marginTop="20dp"
            android:text="Users"
            android:textAlignment="center" />

        <ListView
            android:id="@+id/listUsers"
            android:layout_width="match_parent"
            android:layout_height="300dp"></ListView>

        <Button
            android:id="@+id/backButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:onClick="backBtn"
            android:text="Back" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>