...
            android:gravity="center"
            android:text="WELCOME"
            android:textColor="#2E7DBB"
            android:textSize="25dp" />

        <Button
            android:id="@+id/profileEmployee"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:onClick="profileEmployee"
            android:text="Profile" />

        <Button
            android:id="@+id/clinicEmployee"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:onClick="clinicEmployee"
            android:text="Clinic" />
...
