...
                    android:text="Walk-in Clinic"
                    android:textColor="#2E7DBB"
                    android:textSize="40sp"
                    app:fontFamily="monospace" />

                <Button
                    android:id="@+id/regButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="100dp"
                    android:layout_marginBottom="20dp"
                    android:width="200dp"
                    android:onClick="registerBtn"
                    android:text="Register"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/logButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:width="200dp"
                    android:onClick="loginBtn"
                    android:text="Log In"
...
